# tracking_metrics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: tests.yml
docs/: 3d_tracking.md  adapters.md  advanced_metrics.md  cli.md  data_format.md  examples.md  index.md  installation.md  masks.md  matching.md  metrics.md  python_api.md  visualization.md
examples/: batch_eval.py  custom_adapter.py  evaluate_example.py  gt.json  gt_3d.json  gt_masks.json  pred.json  pred_3d.json  pred_masks.json  toy_2d_boxes.py  toy_3d_boxes.py  toy_masks.py  visualize_results.py
examples/configs/: mask_eval.yaml
examples/data/: gt_scene_001.json  gt_scene_002.json  pred_scene_001.json  pred_scene_002.json
src/tracking_metrics/: __init__.py
src/tracking_metrics/adapters/: __init__.py  base.py
src/tracking_metrics/cli/: __init__.py  evaluate.py
src/tracking_metrics/config/: __init__.py  loader.py  schema.py
src/tracking_metrics/data/: __init__.py  boxes.py  boxes3d.py  detection.py  frame.py  io.py  masks.py  sequence.py
src/tracking_metrics/evaluation/: __init__.py  association.py  batch.py  config.py  evaluator.py  events.py  identity_history.py
src/tracking_metrics/geometry/: __init__.py  box2d_ops.py  box3d_ops.py  (+2 more)
tests/: conftest.py  helpers.py  test_3d_json_io.py  test_3d_metrics.py  test_advanced_cli.py  test_batch_cli.py  test_batch_evaluator.py  test_box2d_iou_matcher.py  test_box2d_ops.py  test_box3d_iou_matcher.py  test_box3d_ops.py  test_center_distance_matcher.py  test_cli.py  test_config.py  test_fragmentation.py  test_hota.py  test_hota_data_adapter.py  test_hungarian.py  test_id_consistency.py  test_id_switches.py  test_identity_history.py  test_idf1.py  test_mask_iou_matcher.py  test_mask_json_io.py  test_mask_ops.py  test_mota.py  test_motp.py  test_public_api.py  test_sequence_io.py  test_temporal_iou.py  test_track_coverage.py  test_track_survival.py  test_visualization_association.py  test_visualization_curves.py  test_visualization_overlay.py  test_visualization_summary.py  test_visualization_timeline.py
(+35 files in other folders)
