[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracking-metrics"
version = "0.1.0"
description = "Dataset-independent Python library for evaluating multi-object tracking"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "typer",
    "rich",
]

[project.scripts]
track-metrics = "tracking_metrics.cli.evaluate:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracking_metrics"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
