[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracking-metrics"
version = "0.5.0"
description = "Dataset-independent Python library for evaluating multi-object tracking"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "typer",
    "rich",
    "pyyaml",
]

[project.scripts]
track-metrics = "tracking_metrics.cli.evaluate:app"

[project.optional-dependencies]
masks = ["pycocotools"]
viz = ["matplotlib"]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracking_metrics"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
